--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "auth0": "^4.29.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
