--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "healthcheck": "npm ls --depth=0 && npx depcheck && npm audit"
   },
   "dependencies": {
-    "@mercadopago/sdk-js": "^0.0.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -34,7 +33,7 @@
     "@paypal/checkout-server-sdk": "^1.0.3",
     "auth0": "^4.29.0",
     "axios": "^1.12.2",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
@@ -42,7 +41,7 @@
     "express-openid-connect": "^2.19.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
-    "mercadopago": "^2.9.0",
+    "mercadopago": "^1.5.6",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -61,6 +60,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/mercadopago": "^1.5.11",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
