--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "express-openid-connect": "^2.19.2",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "mercadopago": "^1.5.6",
@@ -59,6 +60,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^30.0.0",
     "@types/mercadopago": "^1.5.11",
     "@types/node": "^22.18.6",
