--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mercadopago": "^1.5.6",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
